src/test/resources/example/cocos/invalid/invalidConstructorName.ocl
ocl invalidConstructorName {
  context new auction(Policy p)
  pre Test: p != null;
  post Test: policy == p && status == INITIAL && messages.isEmpty;
}
